test_suite/tests/errors/conditionless_rule_with_fallback.rs
use banish::banish;

fn main() {
    banish! {
        @foo
            step? { return; } !? { return; }
    }
}
