test_suite/tests/errors/conditionless_rule_with_fallback.stderr
error: Rule 'step' cannot have an '!?' clause without a condition.
 --> tests/errors/conditionless_rule_with_fallback.rs:6:13
  |
6 |             step? { return; } !? { return; }
  |             ^^^^
